chg: ✏️ Update title to fix build

--- a/_posts/2022-02-08-factory.md
+++ b/_posts/2022-02-08-factory.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: @adrien-may/factory - Factories with typeorm for easier testing or seeding
+title: Factories with node for easier testing or seeding
 categories: [testing, opensource]
 tags: [code, testing, opensource, javascript, typeorm]
 comments: true
